[gd_scene load_steps=7 format=3 uid="uid://dtaiknc82owfs"]

[ext_resource type="Script" path="res://scenes/debug/raw_resource_viewer.gd" id="1_mnwmh"]
[ext_resource type="PackedScene" path="res://scenes/debug/raw_resource_viewers/font_viewer.tscn" id="3_8bhsx"]
[ext_resource type="PackedScene" uid="uid://hlp4kvdep5wg" path="res://scenes/debug/raw_resource_viewers/image_viewer.tscn" id="3_qsha3"]
[ext_resource type="PackedScene" path="res://scenes/debug/raw_resource_viewers/npc_viewer.tscn" id="4_ap8he"]
[ext_resource type="PackedScene" uid="uid://j4rfe4c53735" path="res://scenes/debug/raw_resource_viewers/level_viewer.tscn" id="5_n6f1n"]
[ext_resource type="PackedScene" uid="uid://dguwqqykcrr1a" path="res://scenes/debug/raw_resource_viewers/strings_viewer.tscn" id="6_vcoj7"]

[node name="resource_viewer" type="Node2D"]
script = ExtResource("1_mnwmh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="button_container" type="VBoxContainer" parent="CanvasLayer/ui"]
top_level = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -160.0
offset_right = 100.0
grow_vertical = 0
theme_override_constants/separation = 12

[node name="button_strings" type="Button" parent="CanvasLayer/ui/button_container"]
layout_mode = 2
text = "Strings"

[node name="button_images" type="Button" parent="CanvasLayer/ui/button_container"]
layout_mode = 2
text = "Images"

[node name="button_fonts" type="Button" parent="CanvasLayer/ui/button_container"]
layout_mode = 2
text = "Fonts"

[node name="button_npcs" type="Button" parent="CanvasLayer/ui/button_container"]
layout_mode = 2
text = "NPCs"

[node name="button_levels" type="Button" parent="CanvasLayer/ui/button_container"]
layout_mode = 2
text = "Levels"

[node name="button_back" type="Button" parent="CanvasLayer/ui/button_container"]
layout_mode = 2
text = "Back"

[node name="resource_viewers" type="MarginContainer" parent="CanvasLayer/ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="image_viewer" parent="CanvasLayer/ui/resource_viewers" instance=ExtResource("3_qsha3")]
visible = false
layout_mode = 2

[node name="font_viewer" parent="CanvasLayer/ui/resource_viewers" instance=ExtResource("3_8bhsx")]
visible = false
layout_mode = 2

[node name="npc_viewer" parent="CanvasLayer/ui/resource_viewers" instance=ExtResource("4_ap8he")]
visible = false
layout_mode = 2

[node name="level_viewer" parent="CanvasLayer/ui/resource_viewers" instance=ExtResource("5_n6f1n")]
visible = false
layout_mode = 2

[node name="strings_viewer" parent="CanvasLayer/ui/resource_viewers" instance=ExtResource("6_vcoj7")]
layout_mode = 2

[connection signal="pressed" from="CanvasLayer/ui/button_container/button_back" to="." method="_on_button_back_pressed"]
